Improve keyboard navigation and annotations throughout the app for better accessibility (a11y)
GNOME Calendar is not known to be very accessible nor keyboard-friendly. This is a partial list of currently known 8. Accessibility issues we have been able to find so far. We are not a11y experts, so help is welcome to
- Figure out how visually-impaired people use calendaring apps, and what they would expect in terms of general UX
- Figure out what exactly is missing or broken, technically
- Implement fixes for anything below and 8. Accessibility issues.
Observed problems
Jeff's (non-expert) casual observations on GNOME Calendar 44.x's keyboard navigability:
- There seem to be some keyboard navigation issues with the mini calendar gtk widget:
- You can't focus the < > arrows
- #933 (comment 1773532) might incidentally solve one of those issues if we rip those < > buttons back into the headerbar
- Focus goes directly to individual days (no way to focus/skip the whole grid block thingy first? should there be?)
- You can't focus the < > arrows
- You can focus events in the sidebar but not activate/open/edit them in any way; it might be that the focus is on the wrong widget (i.e.: the row instead of the child item within the row)... but we need someone to figure out how to solve that.
- Once you run through the events/widgets of the sidebar, focus then shifts to the headerbar... but after the headerbar there is no continuation to the main view, it loops back to the UI's beginning.
- The week and month views' canvas/widgets are a black box, and non-interactive (like the sidebar in 43-44.x)
- It is unclear to us whether the month view and week view should even be made accessible (see #1061 (comment 1919276)), vs just the sidebar
-
In the event editor dialog, the "notes" textfield eats!344 (merged)Tab
andShift+Tab
so if you ever enter that field you are forever trapped. Unless indenting/unindenting a markdown list content line, there is no reason to have tabs be parsed as text there.
Development tasks
Appetizer:
-
Review MR !344 (merged) -
Review MR !252 (closed) -
Review issue #524 (closed) -
Turn on the accessibility warnings in the GTK Inspector and see if the list below needs to be expanded (see also this blog post) -
Review MR !348 (closed)
"Low-hanging fruit" problems to fix:
- Inconsistent behaviour in the sidebar calendar widget
-
Keyboard navigation within the minicalendar should use arrow keys, not Tab
(Tab
should directly jump to the events listview below it) -
Focus doesn't work with the sidebar listbox unless you press Tab
while the last day of the minicalendar is selected -
Impossible to activate events in the agenda (items in the sidebar listview)
While you can select items (events), you cannot enter their detailed view nor edit them
-
-
Focus goes "poof" when leaving the sidebar -
Ensure that all icon-only buttons have a11y labels (tooltips alone are not enough, they should only be used as a fallback)
Harder problems to fix (how much effort would that be, considering issue #603 might be in the plans?) :
-
Figure out what the planned new FreeDesktop accessibility architecture means for us in practice as a GTK4 application, once it becomes available someday - If week view and month view need to be accessible (see #1061 (comment 1919276)), fix them:
-
Week view doesn't implement focus handling -
Month view doesn't implement focus handling, and has no keyboard navigation/operations: #1061
-
Edited by Jeff Fortin